# -*- mode: python -*-
# vi: set ft=python :

load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:py.bzl", "py_library", "py_test")

py_library(
    name = "drake_gym",
    srcs = ["drake_gym.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@drake//bindings/pydrake",
        "@gym_py",
    ],
)

py_library(
    name = "mock_torch_py",
    srcs = [
        "test/mock_torch/torch/__init__.py",
        "test/mock_torch/torch/distributions.py",
        "test/mock_torch/torch/nn.py",
        "test/mock_torch/torch/optim.py",
    ],
    imports = ["test/mock_torch"],
)

py_test(
    name = "drake_gym_test",
    srcs = ["test/drake_gym_test.py"],
    deps = [
        ":drake_gym",
        ":mock_torch_py",
        "//drake_gym/examples:box_flipup",
        "@stable_baselines3_internal//:stable_baselines3",
    ],
)

add_lint_tests()
